# rust-v-node-lambda

./: README.md  wine-data-set.json
basic-endpoint/: Cargo.toml
infra/: package.json
infra/lib/: infra-stack.ts
infra/src/: handler-parse.ts  handler.ts
parse-endpoint/: Cargo.toml
parse-endpoint/src/: main.rs
