[package]
name = "parse-endpoint"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.79"
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.14.0"
env_logger = "0.11.1"
file = "1.1.2"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
log = "0.4.20"
pathbuf = "1.0.0"
rusoto_core = { version = "0.48", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.48", default_features = false, features = ["rustls"] }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
